# ConvolutionEngine

./: ConvolutionEngine.hpp  ConvolutionUtils.hpp  DenseConvolutionEngine.hpp  IRHandle.h  README.md  SparseConvolutionEngine.hpp  VelvetConvolutionEngine.hpp
UnitTests/: CMakeLists.txt  generate_test_data.py  make.bat
UnitTests/src/: buffer_logic_tests.cpp  dense_morphing_tests.cpp  edge_case_tests.cpp  functional_tests.cpp  generated_test_data.hpp  initialization_tests.cpp  long_signal_tests.cpp  main.cpp  test_common.hpp  velvet_morphing_tests.cpp
